--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -49,7 +49,7 @@
         <auth-method>FORM</auth-method>
         <realm-name>itmd4515Realm</realm-name>
         <form-login-config>
-            <form-login-page>/login.html</form-login-page>
+            <form-login-page>/login.jsp</form-login-page>
             <form-error-page>/error.html</form-error-page>
         </form-login-config>
     </login-config>
